fix image stretching in the search and the homepages

--- a/css/style.css
+++ b/css/style.css
@@ -14,5 +14,5 @@ body::before {
 
 .card-img-top {
   height: 180px;
-  /* object-fit: cover; */
+  object-fit: cover;
 }
